--- a/cliente/dockerfile
+++ b/cliente/dockerfile
@@ -8,7 +8,9 @@ WORKDIR /app
 RUN apt-get update && apt-get install -y \
     libx11-dev \
     libgl1-mesa-glx \
-    libglib2.0-0
+    libglib2.0-0 \
+    libxkbcommon0 \
+    libegl1
 
 # Copie os arquivos de dependência (caso haja um requirements.txt)
 COPY requirements.txt /app/
@@ -23,4 +25,4 @@ COPY . /app/
 EXPOSE 5000
 
 # Comando para rodar o cliente
-CMD ["python", "cliente.py"]
+CMD ["python", "clienteGUI.py"]
